# ft_ls

./: ._ft_keys.c  .nfs.2005104d.2144  .nfs.20051152.3244  CMakeLists.txt  ERROR  Makefile  a.out  ela.cpp  error.c  find_keys.c  find_keys.c~  find_path.c  find_path.c~  ft_alpha_sort.c  ft_error.c  ft_fill_name.c  ft_initialization.c  ft_insert_files.c  ft_keys.c  ft_ls  ft_ls.c  ft_ls.c~  ft_ls.h  ft_ls.h.gch  ft_opendir.c  ft_print.c  ft_time_sort.c  ft_verification_param.c  ls.sh  main.c  main.c~  ordinary.c  print_ls.c  print_ls.c~  recursion.c  sort_ls.c  sort_ls.c~  start.c
ft_ls.dSYM/Contents/Resources/DWARF/: ft_ls
libft/: ._accuracy.c  ._author  ._change.c  ._check.c  ._check_accuracy.c  ._check_flags.c  ._check_size.c  ._check_width.c  ._find.c  ._flags.c  ._ft_atoi.c  ._ft_bzero.c  ._ft_count_words.c  ._ft_isalnum.c  ._ft_isalpha.c  ._ft_isascii.c  ._ft_isdigit.c  ._ft_isprint.c  ._ft_itoa_base.c  ._ft_lstadd.c  ._ft_lstdel.c  ._ft_lstdelone.c  ._ft_lstiter.c  ._ft_lstmap.c  ._ft_lstnew.c  ._ft_memalloc.c  ._ft_memccpy.c  ._ft_memchr.c  ._ft_memcmp.c  ._ft_memcpy.c  ._ft_memdel.c  ._ft_memmove.c  ._ft_memset.c  ._ft_print.c  ._ft_printf.c  ._ft_putchar.c  ._ft_putchar_fd.c  ._ft_putendl.c  ._ft_putendl_fd.c  ._ft_putnbr.c  (+41 more)
